# agent-teams

./: .gitignore  pyproject.toml
agent_teams/: __init__.py  __main__.py  cli.py  config.py  settings.yaml
agent_teams/agents/: architect.py  base.py  coder.py  coordinator.py  imagegen.py  researcher.py  reviewer.py  writer.py
agent_teams/coding/agents/: specialists.py
agent_teams/coding/review/: code_review.py
agent_teams/coding/workflows/: all_workflows.py
agent_teams/core/: client.py  message.py  streaming.py
agent_teams/integrations/: github.py
agent_teams/output/: console.py  files.py
agent_teams/publishing/: models.py
agent_teams/publishing/agents/: specialists.py
agent_teams/publishing/content/: rich_content.py
agent_teams/publishing/formats/: converter.py
agent_teams/publishing/review/: reviewers.py
agent_teams/publishing/workflows/: all_workflows.py
agent_teams/routing/: strategy.py
agent_teams/workflows/: base.py
docs/: three_engine_upgrade_20260319.md
output/: general_20260318_093859.md  writing_20260318_081735.md
tests/: test_cli_routes.py  test_config_routes.py  test_workflow_parallel.py
